# fathom-video-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
src/fathom_video_mcp/: __init__.py  server.py
