[project]
name = "fathom-video-mcp"
version = "0.1.0"
description = "MCP server for Fathom video meeting API - list meetings, get summaries, and transcripts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Trevor Welch"}
]
keywords = ["mcp", "fathom", "meetings", "transcripts", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
fathom-video-mcp = "fathom_video_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fathom_video_mcp"]

[tool.uv]
dev-dependencies = []
